# extendible-hash-rust

./: Cargo.toml  README.md
benches/: my_benchmark.rs
src/: lib.rs  main.rs
