[package]
name = "extendible-hash"
version = "0.1.0"
edition = "2021"
description = "Provides a hash table that uses the extendible hash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.bench]
lto = true
